# zsim

./: CMakeLists.txt  Makefile
cmake/: zsConfig.cmake  zsConfig.cmake.in  zsDataDir.cmake  zsFetch.cmake  zsInstall.cmake  zsLibrary.cmake  zsOptions.cmake  zsimConfig.cmake  zsimConfig.cmake.in  zsimConfigVersion.cmake.in  zsimUse.cmake
doc/: CMakeLists.txt
examples/: CMakeLists.txt  EngngModelTest.cpp  helloZsim.cpp  linearAlgebra_example.cpp  linearSolvers_example.cpp
extensions/zsTrilinos/: CMakeLists.txt  zsTrilinos.h
extensions/zsUnitTest/: CMakeLists.txt  README.md
extensions/zsUnitTest/zs/: CheckFiles.cpp  CheckFiles.h  CheckMacros.h  CheckMatrix.h  SuppressOutput.cpp
optional/: CMakeLists.txt
src/: CMakeLists.txt  zsim.h
src/zsCore/: Domain.cpp  Domain.h  EngineeringModel.cpp  EngineeringModel.h  zsAssemblerCallback.cpp  zsAssemblerCallback.h  zsCharType.h  zsConfig.h.in  zsContextMode.h  zsContextOutputMode.cpp  zsContextOutputMode.h  zsDataReader.cpp  zsDataReader.h  zsDebug.h  zsDofIDItem.h  zsDomain.cpp  zsDomain.h  zsElement.cpp  zsElement.h  zsEngngModel.cpp  zsEngngModel.h  zsErrorEstimator.cpp  zsErrorEstimator.h  zsExport.h.in  zsExportModule.cpp  zsExportModule.h  zsExportModuleManager.cpp  zsExportModuleManager.h  zsField.cpp  zsField.h  zsFieldManager.cpp  zsFieldManager.h  zsFmode.h  zsForwardDeclarations.h  zsInitModule.h  zsInitModuleManager.cpp  zsInitModuleManager.h  zsInputRecord.cpp  zsInputRecord.h  zsIntArray.cpp  (+27 more)
src/zsIO/: zsCmdLine.cpp  zsCmdLine.h
src/zsMatrix/: Adjugate.h  zsAsMatrix.h  zsEigenDeclarations.h  zsMatrix.h  zsMatrixAddons.h  zsMatrixBlockView.h  zsPoint.h  zsSparseMatrix.h  zsSparseRows.h  zsSparseSolver.h  zsSparseVector.h  zsVector.h
src/zsUtils/: zsStopwatch.h  zsTimer.cpp  zsTimer.h
unittests/: CMakeLists.txt  main.cpp  zsTutorial.cpp  zsim_unittest.h
